# franka_vr_teleop

./: .env.example  .gitignore  .stage3_oc2arm_R.meta.json  .stage3_oc2arm_R.npy  CLAUDE.md  LICENSE  NOTICE.md  README.md  REAL_TEST_STEPS.txt  analyze_oc_tilt.py  franka_hdf5_schema.py  pyproject.toml  requirements.txt  setup.py  setup.sh  stage3_teleop.py  unity_vr_reader.py  vr_align.py
debug/: README.md  franka_arm_health.sh  franka_arm_snapshot.sh  franka_clean_restart.sh  franka_cleanup.sh  franka_empirical_axis_test.py  franka_gripper_cleanup_check.sh  franka_gripper_diag.sh  franka_gripper_stop_only.sh  franka_gripper_verify.sh  franka_gripper_verify2.sh  franka_h5_inspect.py  franka_poll_arm.sh  franka_poll_gripper.sh  franka_rot_proof.py  franka_rot_singularity_test.py  franka_start_arm.sh  franka_start_gripper.sh  franka_start_zerorpc.sh  franka_verify_zerorpc.sh  franka_vr_delta_probe.py  franka_vr_delta_probe2.py  install_fixed_mapping.py
docs/: DATA_PIPELINE.md  POLYMETIS_BUILD.md  QUICKSTART.md  README.md  architecture.md  data-format.md  development-guide.md  phaseD-v2-acceptance.md  phaseE-ui-acceptance.md
lerobot_teleoperator_franka/: setup.py
scripts/: run_ui.sh
tests/: conftest.py  test_acquisition.py  test_align_offline.py  test_analyze_oc_tilt.py  test_async_saver.py  test_debug_scripts_paths.py  test_episode_keyboard.py  test_franka_hdf5_schema.py  test_franka_hdf5_schema_v2.py  test_hdf5_lerobot_map.py  test_hdf5_writer.py  test_hdf5_writer_async.py  test_image_color_convention.py  test_import_order_guard.py  test_migrate_v1_to_v2.py  (+37 more)
(+58 files in other folders)
